# vllm-ascend-deepseekv4

./: .gitignore  0001-Modify-the-docs-and-config-of-v4.patch  CMakeLists.txt  README_OPT.txt  mypy.ini  pyproject.toml  requirements.txt  setup.py
.codemate/: codebaseBranchInfo.json
.codemate/.codebase/: app.properties  codebaseId.properties
.github/: actionlint.yaml
.github/workflows/: _e2e_nightly_multi_node.yaml  _e2e_nightly_single_node.yaml  _e2e_nightly_single_node_models.yaml  _e2e_test.yaml  _nightly_image_build.yaml  _parse_trigger.yaml  _pre_commit.yml  _schedule_image_build.yaml  _unit_test.yaml  bot_merge_conflict.yaml  labled_doctest.yaml  labled_download_model.yaml  nightly_image_build.yaml  pr_test_full.yaml  pr_test_light.yaml  schedule_image_build_and_push.yaml  schedule_nightly_test_a2.yaml  schedule_nightly_test_a3.yaml  schedule_release_code_and_wheel.yml  scheduled_image_build_and_push.yaml
.github/workflows/dockerfiles/: Dockerfile.nightly.a2  Dockerfile.nightly.a3
csrc/: CMakeLists.txt  build.sh  build_aclnn.sh  torch_binding.cpp  torch_binding_meta.cpp
csrc/aclnn_torch_adapter/: op_api_common.h
csrc/attention/: CMakeLists.txt
csrc/attention/indexer_compress_epilog/: CMakeLists.txt
csrc/attention/inplace_partial_rotary_mul/: CMakeLists.txt
csrc/attention/kv_compress_epilog/: CMakeLists.txt
csrc/attention/kv_quant_sparse_attn_sharedkv/: README.md
csrc/attention/kv_quant_sparse_attn_sharedkv_metadata/: CMakeLists.txt  README.md
csrc/attention/quant_lightning_indexer/: README.md
csrc/attention/quant_lightning_indexer_metadata/: CMakeLists.txt  README.md
csrc/attention/sparse_attn_sharedkv/: README.md
csrc/attention/sparse_attn_sharedkv_metadata/: CMakeLists.txt
csrc/cmake/: config.cmake  custom_build.cmake  func.cmake  gen_ops_info.cmake  obj_func.cmake  opbuild.cmake  package.cmake  symbol.cmake  variables.cmake
csrc/cmake/modules/: Findaicpu.cmake
csrc/cmake/scripts/: merge_aicpu_info_json.sh
csrc/compressor/op_host/: CMakeLists.txt  compressor_tiling.cpp  compressor_tiling.h
csrc/compressor/op_kernel/: compressor_kernel.h  compressor_vector_comm.h
csrc/dispatch_ffn_combine/op_host/: aclnn_dispatch_ffn_combine.cpp  aclnn_dispatch_ffn_combine.h  dispatch_ffn_combine_def.cpp  dispatch_ffn_combine_tiling.cpp
csrc/dispatch_ffn_combine/op_kernel/: dispatch_ffn_combine.h  dispatch_ffn_combine_kernel.hpp  dispatch_ffn_combine_tiling.h
csrc/gmm/grouped_matmul_swiglu_quant_v2/: grouped_matmul_swiglu_quant_v2_torch_adpt.h
csrc/gmm/grouped_matmul_swiglu_quant_weight_nz_tensor_list/: CMakeLists.txt
csrc/lightning_indexer_quant_metadata/op_api/: l0_lightning_indexer_quant_metadata.h
csrc/lightning_indexer_quant_metadata/op_host/: CMakeLists.txt
csrc/mc2/dispatch_ffn_combine/: dispatch_ffn_combine_torch_adpt.h
csrc/moe_gating_top_k_hash/op_host/: CMakeLists.txt  moe_gating_top_k_hash_tiling.cpp
csrc/quant_lightning_indexer/op_host/: CMakeLists.txt  quant_lightning_indexer_infershape.cpp  quant_lightning_indexer_tiling.cpp  quant_lightning_indexer_tiling.h
csrc/quant_lightning_indexer/op_kernel/: quant_lightning_indexer.cpp
csrc/sparse_attn_sharedkv/op_host/: CMakeLists.txt  sparse_attn_sharedkv_def.cpp  sparse_attn_sharedkv_proto.cpp  sparse_attn_sharedkv_tiling.cpp  sparse_attn_sharedkv_tiling.h
csrc/sparse_attn_sharedkv_metadata/op_host/: CMakeLists.txt
csrc/sparse_attn_sharedkv_metadata/op_kernel_aicpu/: sparse_attn_sharedkv_metadata_aicpu.cpp
docs/: custom_op_compilation_framework_analysis.md
docs/source/community/: versioning_policy.md
docs/source/tutorials/: DeepSeek-V4.md  index.md
examples/: .test.sh.swp  generate_endpoint_configs.py  offline_inference_npu_tp2.py  proxy.sh  test.sh  test_decode.sh  test_prefill.sh
examples/disaggregated_prefill_v1/: load_balance_proxy_server_example.py
profiling_docs/vllm_serve/: deepseek-v4-Pro.md  deepseek-v4.md
tests/e2e/: conftest.py
tests/e2e/singlecard/: test_aclgraph_accuracy.py
tests/ut/: test_ascend_config.py  test_platform.py  test_utils.py
tests/ut/attention/: test_dsa_v1.py
tests/ut/batch_invariant/: test_batch_invariant.py
tests/ut/core/: test_kv_state_scheduler.py
tests/ut/models/: test_deepseek_v4_lmhead.py
tests/ut/ops/: deepseekv4_attention_post.py  test_dispatch_ffn_combine_w4a8.py  test_gate_topk.py  test_layernorm.py  test_linear.py  test_qli.py  (+7 more)
vllm_ascend/: __init__.py  ascend_config.py  ascend_forward_context.py  batch_invariant.py  envs.py  meta_registration.py  mxfp_compat.py  platform.py  utils.py
vllm_ascend/attention/: .dsa_v1.py.swp  abstract.py  attention_v1.py  dsa_v1.py  mla_v1.py  sfa_v1.py  utils.py
vllm_ascend/compilation/: compiler_interface.py  graph_fusion_pass_manager.py  unified_mtp_graph.py  unified_mtp_graph_safe.py
vllm_ascend/core/: compressor_schedule.py  kv_cache_spec.py  kv_state_manager.py  kv_state_scheduler.py  multi_block_pool.py  recompute_scheduler.py  scheduler_dynamic_batch.py  single_type_kv_cache_manager.py
vllm_ascend/device/: device_op.py  mxfp_compat.py
vllm_ascend/device_allocator/: camem.py
vllm_ascend/distributed/: __init__.py  mooncake_connector.py  mooncake_layerwise_connector.py  mooncake_state_connector.py  parallel_state.py  utils.py
vllm_ascend/eplb/: utils.py
vllm_ascend/models/: __init__.py  deepseek_mtp.py  deepseek_new.py  deepseek_new_mtp.py  deepseek_v4.py  deepseek_v4_kv_cache_utils.py  deepseek_v4_mtp.py  deepseek_xyz.py  deepseek_xyz_mtp.py
vllm_ascend/ops/: cv_linear.py  dsa.py  layernorm.py  linear.py  linear_op.py  mhc.py  register_custom_ops.py  rope_dsv4.py  rotary_embedding.py  vocab_parallel_embedding.py
vllm_ascend/patch/: __init__.py
vllm_ascend/prefetch/: __init__.py  custom_ops.py  manager.py
vllm_ascend/quantization/: fp8_config.py  method_adapters.py  quant_config.py  utils.py  w4a4_mxfp4.py  w8a8_dynamic.py  w8a8mxfp8.py
vllm_ascend/sample/: rejection_sampler.py  sampler.py
vllm_ascend/spec_decode/: eagle_proposer.py  mtp_proposer.py
vllm_ascend/worker/: block_table.py  model_runner_v1.py  npu_input_batch.py  worker.py
(+357 files in other folders)
